# target-project-00

./: .env.example  README.md  pyproject.toml
data/: common_sentence_filter.py  common_sentence_filtered.jl  common_sentence_filtered_report.txt  filtered_products.jl  rule_based_filtering.py  target_products.jl  utils.py
src/: api.py  ingest.py  rag_service.py  streaming.py
src/logs/: ingest
src/results/: filter_test_1.txt  filter_test_2.txt  filter_test_3.txt  filter_test_4.txt  filter_test_5.txt  filter_test_6.txt  filter_test_7.txt  filter_test_8.txt  filter_test_9.txt
test/: test_rag.py
