[tool.poetry]
name = "target-product-rag"
version = "1.0.3"
description = "RAG system for Target product search using Elasticsearch and OpenAI Agents."
authors = ["Arpan Mahapatra <arpanmahapatra1999@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
litellm = ">=1.50.0,<=1.68.0"
pydantic = ">=2.0.0,<=2.10.6"
fastembed = "0.4.0"
elasticsearch = "8.18.1"
openai-agents = ">=0.0.10,<=0.0.14"
fastapi = "0.115.9"
uvicorn = "0.34.0"
langsmith = "0.3.42"
pytest = "8.3.4"
python-dotenv = "1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 